# minecraft-panel

./: .commit-msg  .gitignore  Cargo.toml  commit-msg.txt  commit_msg.txt  msg.txt  package-lock.json  package.json  skills-lock.json  test_nbt.js  test_serde.rs  test_serde2.rs
.agents/: impt.md
.agents/rules/: conventional-commit.md  expert-engineer.md  expo-typescript-dev-expert.md  middleware-and-edge-functions-expert.md  react-native-typescript-expert.md  rust-error-handling-patterns.md  rust-status.md  rust-systems-programming.md  rust-testing-benchmarking.md
.dev/: CheckFeature.md
.github/workflows/: release-daemon.yml  release.yml
daemon/: Cargo.toml
daemon/DOCUMENTATION/: Docker.md
daemon/DOCUMENTATION/API/: Docker.md  Files.md  Servers.md  System.md
daemon/src/: auth.rs  config.rs  console.rs  db.rs  docker.rs  files.rs  main.rs  metrics.rs  routes.rs  scheduler.rs  update.rs
daemon/src/docker/: create.rs  delete.rs  general.rs  info.rs  mod.rs  power.rs  tty.rs
daemon/src/files/: action.rs  hash.rs  list.rs  mod.rs  read.rs  write.rs
daemon/src/routes/: automations.rs  history.rs  mod.rs  sessions.rs  users.rs
daemon/src/routes/files/: action.rs  download.rs  hash.rs  list.rs  mod.rs  read.rs  upload.rs  write.rs
daemon/src/routes/servers/: command.rs  crashes.rs  create.rs  delete.rs  inspect.rs  list.rs  logs.rs  mod.rs  ping.rs  power.rs  ws.rs
daemon/src/routes/system/: backups.rs  crontab.rs  docker.rs  health.rs  host.rs  info.rs  logs.rs  memory.rs  metrics.rs  mod.rs  pty.rs  update.rs
panel/: package.json
panel/src/: App.tsx
panel/src-tauri/: Cargo.toml  tauri.conf.json
panel/src-tauri/src/: error.rs  lib.rs  models.rs  node_client.rs  state.rs
panel/src/api/: players.ts
panel/src/components/: AppLayout.tsx  AutomationsPanel.tsx  ConnectionGate.tsx  ConsolePanel.tsx  DockerPanel.tsx  HistoryPanel.tsx  MinecraftText.tsx  ModsPanel.tsx  OptionsPanel.tsx  OverviewPanel.tsx  PlayersPanel.tsx  SftpPanel.tsx  SystemPanel.tsx  TerminalComponent.tsx  VersionPanel.tsx  WorldsPanel.tsx
panel/src/hooks/: useConnectionGate.ts  useConsole.ts  useMetricsAgent.ts  useServerControls.ts  useServerOptions.ts  useServerStats.ts  useSessions.ts  useWorlds.ts
panel/src/i18n/: index.ts
panel/src/lib/: actionLogger.ts  ansiParser.ts  tauriBridge.ts  utils.ts
panel/src/store/: activeServerStore.ts  backupStore.ts  connectionStore.ts  modsStore.ts  (+2 more)
protocol/: Cargo.toml
protocol/src/: api.rs  auth.rs  docker.rs  lib.rs  ws.rs
server/: README.md  cleanup.sh  setup.sh
src/: App.tsx  fonts.css  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  models.rs  state.rs  test_sftp.rs
src-tauri/src/commands/: connection.rs  console.rs  metrics.rs  mod.rs  ping.rs  players.rs  rcon.rs  service.rs  sftp.rs  users.rs
src-tauri/src/protocol/: mc_ping.rs  mod.rs
src-tauri/src/ssh/: connection.rs  exec.rs  mod.rs
src-tauri/src/transfer/: download.rs  upload.rs
src/api/: modrinth.ts  players.ts
src/components/: AccessPanel.tsx  AppLayout.tsx  AutomationsPanel.tsx  BackupsPanel.tsx  ConnectionGate.tsx  ConsolePanel.tsx  Dashboard.tsx  FileEditor.tsx  HistoryPanel.tsx  ModsPanel.tsx  OptionsPanel.tsx  OverviewPanel.tsx  PlayerDetailsModal.tsx  PlayersPanel.tsx  ServerControls.tsx  SftpPanel.tsx  TitleBar.tsx  UploadModal.tsx  VersionPanel.tsx  WorldsPanel.tsx
src/hooks/: useAutoUpdater.ts  useConnectionGate.ts  useConsole.ts  useMetricsAgent.ts  useModrinth.ts  usePlayerDetails.ts  usePlayers.ts  useServerControls.ts  useServerOptions.ts  useServerStats.ts  useSessions.ts  useSftp.ts  useWorlds.ts
src/lib/: actionLogger.ts  ansiParser.ts  minecraftCommands.ts  modUtils.ts  tauriBridge.ts
src/store/: backupStore.ts  connectionStore.ts  consoleStore.ts  modsStore.ts  permissionStore.ts  serverStatsStore.ts  sessionStore.ts
src/types/: permissions.ts
(+91 files in other folders)
