[package]
name = "daemon"
version = "0.1.32"
edition = "2021"
description = "Node daemon for minecraft-panel managing Docker containers, console streams, and node security"
authors = ["iSweat"]

[dependencies]
protocol = { path = "../protocol" }
bollard = "0.18"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

sha2 = "0.10"
sha1 = "0.10"
sysinfo = "0.39.6"
lazy_static = "1.5.0"
base64 = "0.22.1"
craftping = { version = "0.7.0", features = ["async-tokio"] }
tracing-appender = "0.2.5"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio-cron-scheduler = "0.13"
flate2 = "1.0"
tar = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.9.0"

