[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
description = "Shared types, WebSocket messages, API contracts, and auth protocol between minecraft-panel and daemon"
authors = ["iSweat"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
thiserror = "2.0"
ed25519-dalek = { version = "2.1", features = ["alloc"] }
base64 = "0.22"

