[package]
name = "minecraft-panel"
version = "0.1.0"
description = "A Tauri App"
authors = ["iSweat"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minecraft_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9.6"
russh = "0.62.2"
russh-keys = "0.49.2"
tokio = "1.52.4"
russh-sftp = "2.3.0"
keyring = "4.1.5"
thiserror = "2.0.18"
anyhow = "1.0.103"
tauri-plugin-store = "2.4.3"
tauri-plugin-notification = "2.3.3"
async-trait = "0.1.89"
tauri-plugin-dialog = "2.7.1"

