[package]
name = "minecraft-panel"
version = "0.1.0"
description = "A Tauri App"
authors = ["iSweat"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minecraft_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
russh = "0.62.2"
tokio = "1.52.4"
russh-sftp = "2.3.0"
thiserror = "2.0.18"
anyhow = "1.0.103"
tauri-plugin-store = "2.4.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.7.1"
base64 = "0.22.1"
sha2 = "0.11.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

